--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -6,7 +6,7 @@
     <title>Clockwork – 2026 Roadmap</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f8fafc; color: #333; line-height: 1.6; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
         .container { max-width: 1400px; margin: 0 auto; padding: 40px; }
         .nav { position: sticky; top: 0; background: white; padding: 15px 40px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); z-index: 100; display: flex; gap: 20px; justify-content: center; }
         .nav a { color: #64748b; text-decoration: none; font-size: 14px; padding: 8px 16px; border-radius: 6px; }
