Fix Phase 1 title to SparkleTime Sunset

--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -482,7 +482,7 @@
             </div>
         </section>
         <section id="phase1" class="section">
-            <h3>Phase 1: Sparkle Sunset (Jan - Feb 2026)</h3>
+            <h3>Phase 1: SparkleTime Sunset (Jan - Feb 2026)</h3>
             <table class="feature-table"><thead><tr><th>Feature</th><th>Description</th><th>Priority</th></tr></thead><tbody>
                 <tr><td>Appointment Unification</td><td>Migrate from Skedulo Jobs to SF Appointments</td><td><span class="priority p0">P0</span></td></tr>
                 <tr><td>Service Type Mapping</td><td>Standardize mapping for all environments</td><td><span class="priority p0">P0</span></td></tr>
