Swap sentence order to 'AI suggests. You decide. Full control.'

--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -571,7 +571,7 @@
                         <div style="color:#64748b;font-size:10px">Best match: Dr. Lisa C. (travel: 12 min, continuity: 85%)</div>
                         <div style="margin-top:6px"><button style="background:#1e40af;color:white;border:none;padding:4px 12px;border-radius:4px;font-size:10px;cursor:pointer">Accept</button> <button style="background:#e5e7eb;border:none;padding:4px 12px;border-radius:4px;font-size:10px;cursor:pointer">Modify</button></div>
                     </div>
-                    <div style="font-size:10px;color:#64748b;text-align:center">You decide. AI suggests. Full control.</div>
+                    <div style="font-size:10px;color:#64748b;text-align:center">AI suggests. You decide. Full control.</div>
                 </div></div>
                 <div class="mockup"><div class="mockup-header" style="background:#1e40af">📊 Resource Utilization Optimizer</div><div class="mockup-content">
                     <div style="display:flex;align-items:center;gap:8px;margin-bottom:12px;padding:8px;background:#fef2f2;border-radius:6px;font-size:12px">
