Add EMR (Electronic Medical Records) definition on first use

--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -109,7 +109,7 @@
                 <div class="phase-card initiatives" style="border:3px solid #7c3aed">
                     <h4 style="color:#7c3aed">🚀 Strategic Pillar 2: Service Line Configuration</h4>
                     <p><strong>Scale without limits</strong></p>
-                    <p style="font-size:13px">Configure new services without code, work with any ERM system, simulate impact before go-live.</p>
+                    <p style="font-size:13px">Configure new services without code, work with any EMR (Electronic Medical Records) system, simulate impact before go-live.</p>
                 </div>
             </div>
             <div style="margin-top:20px;padding:15px;background:linear-gradient(135deg,#00BDD6,#00a5bc);border-radius:8px;color:white;text-align:center">
@@ -154,7 +154,7 @@
                         </div>
                         <div style="padding:10px;background:#fef2f2;border-radius:6px;margin-bottom:8px">
                             <strong style="color:#dc2626">😤 Salesforce Dependency</strong>
-                            <p style="margin:4px 0 0;color:#64748b;font-size:12px">Can't schedule FITS clients or work with other ERM systems</p>
+                            <p style="margin:4px 0 0;color:#64748b;font-size:12px">Can't schedule FITS clients or work with other EMR systems</p>
                         </div>
                         <div style="padding:10px;background:#fef2f2;border-radius:6px;margin-bottom:8px">
                             <strong style="color:#dc2626">😤 No Way to Test Changes</strong>
@@ -276,7 +276,7 @@
                     <ul style="font-size:12px;list-style:none;padding:0;opacity:0.95">
                         <li style="margin-bottom:6px">• Define durations, roles, locations without code</li>
                         <li style="margin-bottom:6px">• Set availability types & colors</li>
-                        <li style="margin-bottom:6px">• Optional Salesforce mapping (ERM-agnostic)</li>
+                        <li style="margin-bottom:6px">• Optional Salesforce mapping (EMR-agnostic)</li>
                         <li>• Support non-auth clients (FITS)</li>
                     </ul>
                 </div>
@@ -292,7 +292,7 @@
                 <div style="background:rgba(255,255,255,0.1);padding:20px;border-radius:12px">
                     <h4 style="color:#60a5fa;margin-bottom:12px;font-size:14px">🌐 Unlimited Scalability</h4>
                     <ul style="font-size:12px;list-style:none;padding:0;opacity:0.95">
-                        <li style="margin-bottom:6px">• Work with any ERM system</li>
+                        <li style="margin-bottom:6px">• Work with any EMR system</li>
                         <li style="margin-bottom:6px">• Appointments with/without Salesforce</li>
                         <li style="margin-bottom:6px">• Multi-tenant architecture ready</li>
                         <li>• New tenant setup in days, not months</li>
@@ -377,7 +377,7 @@
                             <strong>Salesforce</strong><br><span style="color:#64748b">Client data, authorizations</span>
                         </div>
                         <div style="padding:12px;background:white;border-radius:8px;border:1px solid #e5e7eb;font-size:12px">
-                            <strong>FITS / Willow</strong><br><span style="color:#64748b">Onboarding, ERM data</span>
+                            <strong>FITS / Willow</strong><br><span style="color:#64748b">Onboarding, EMR data</span>
                         </div>
                     </div>
                 </div>
@@ -621,8 +621,8 @@
                     </div>
                     <div style="margin-top:8px;text-align:center"><button style="background:#7c3aed;color:white;border:none;padding:6px 16px;border-radius:4px;font-size:11px;cursor:pointer">Deploy to Production</button></div>
                 </div></div>
-                <div class="mockup"><div class="mockup-header" style="background:#7c3aed">🌐 Multi-ERM Configuration</div><div class="mockup-content">
-                    <div style="font-size:11px;margin-bottom:10px;color:#64748b">Work with any ERM system</div>
+                <div class="mockup"><div class="mockup-header" style="background:#7c3aed">🌐 Multi-EMR Configuration</div><div class="mockup-content">
+                    <div style="font-size:11px;margin-bottom:10px;color:#64748b">Work with any EMR system</div>
                     <div style="font-size:11px;padding:8px;border:1px solid #e5e7eb;border-radius:4px;margin-bottom:6px;background:white">
                         <div style="display:flex;justify-content:space-between;align-items:center">
                             <span><strong>Salesforce</strong></span>
@@ -637,7 +637,7 @@
                     </div>
                     <div style="font-size:11px;padding:8px;border:1px solid #e5e7eb;border-radius:4px;margin-bottom:6px;background:#fef3c7">
                         <div style="display:flex;justify-content:space-between;align-items:center">
-                            <span><strong>No ERM (FITS Clients)</strong></span>
+                            <span><strong>No EMR (FITS Clients)</strong></span>
                             <span style="background:#fef3c7;color:#92400e;padding:2px 8px;border-radius:4px;font-size:10px">Standalone</span>
                         </div>
                     </div>
