--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -87,7 +87,7 @@
         <a href="#phase2">Phase 2</a>
         <a href="#features">Features</a>
         <a href="#roi">ROI</a>
-        <a href="#sow" style="background:#dcfce7;color:#166534;font-weight:600">SOW</a>
+        <a href="#sow" style="background:#dcfce7;color:#166534;font-weight:600">Project ROI</a>
     </nav>
     <div class="container">
         <div class="header">
@@ -668,7 +668,7 @@
         <div id="sow" style="margin-top:60px;padding-top:40px;border-top:4px solid #0891b2">
             <div class="header">
                 <div class="title">
-                    <h1 style="font-size:36px">Statement of Work</h1>
+                    <h1 style="font-size:36px">Project ROI</h1>
                     <h2 style="font-size:18px">Clockwork 2026 Roadmap</h2>
                     <span class="status-badge" style="background:#dcfce7;color:#166534">Active Project</span>
                 </div>
@@ -1127,7 +1127,7 @@
             </section>
 
             <div style="text-align:center;padding:30px;color:#64748b;font-size:13px">
-                <p>Statement of Work: Clockwork 2026 Roadmap</p>
+                <p>Project ROI: Clockwork 2026 Roadmap</p>
                 <p>Document maintained by Product Management | February 2026 | v1.0</p>
             </div>
         </div>
