--- a/2026-roadmap-full.html
+++ b/2026-roadmap-full.html
@@ -73,9 +73,10 @@
         .roi-card .timeline { font-size: 12px; opacity: 0.7; margin-top: 4px; }
         .footer { text-align: center; padding: 30px; color: #64748b; font-size: 13px; }
         @media print {
-            .nav { display: none; }
-            .container { padding: 20px; }
-            .section { break-inside: avoid; }
+            .nav, .no-print { display: none !important; }
+            body { background: white !important; }
+            .container { padding: 20px !important; }
+            .section, .roi-section { break-inside: avoid; }
         }
     </style>
 </head>
@@ -671,6 +672,7 @@
                     <h1 style="font-size:36px">Project ROI</h1>
                     <h2 style="font-size:18px">Clockwork 2026 Roadmap</h2>
                     <span class="status-badge" style="background:#dcfce7;color:#166534">Active Project</span>
+                    <button onclick="window.print()" class="no-print" style="margin-top:10px;padding:8px 20px;background:#0891b2;color:white;border:none;border-radius:6px;cursor:pointer;font-size:13px;font-weight:600">📄 Download PDF</button>
                 </div>
                 <div class="logo">CW</div>
             </div>
